# DOROTHY

./: .gitignore  dorothy.spec  pyproject.toml  readme.md  test_overlay.py
.github/workflows/: release.yml
dorothy/: __init__.py  main.py
dorothy/core/: __init__.py  cif_parser.py  cod_search.py  constants.py  contours.py  density.py  generator.py  selection.py  xtb_manager.py
dorothy/resources/translations/: README.md
dorothy/ui/: __init__.py  main_window.py  molecule_viewer.py  slice_explorer.py  styles.py
examples/CCDC/: 1496329.cif  2446782.cif
examples/aspirin/: 185472.cif
logo/: dorothy_logo.af  dorothy_logo_curves.af  dorothy_logo_curves2.af  dorothy_logo_icon.af
tests/: __init__.py  test_cif_parser.py  test_density.py  test_selection.py
