[project]
name = "dorothy"
version = "0.1.0"
description = "Crystallography teaching tool for visualizing electron density - honoring Dorothy Hodgkin"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.6.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "ase>=3.22.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["dorothy*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[project.scripts]
dorothy = "dorothy.main:main"
